风景详细界面编写，完成数据渲染

--- a/ZhangTu/src/main/res/layout/activity_most_detail.xml
+++ b/ZhangTu/src/main/res/layout/activity_most_detail.xml
@@ -43,7 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/find_white">
+        android:background="@color/find_white"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="0dp"
