--- a/ZhangTu/src/main/res/values/styles.xml
+++ b/ZhangTu/src/main/res/values/styles.xml
@@ -7,5 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <!--自定义dialog样式，宽度无margin-->
+    <style name="MyAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:layout_marginLeft">-10dp</item>
+        <item name="android:layout_marginRight">-10dp</item>
+        <item name="android:layout_marginBottom">-5dp</item>
+    </style>
 </resources>
