--- a/ZhangTu/src/main/res/layout/activity_most_detail.xml
+++ b/ZhangTu/src/main/res/layout/activity_most_detail.xml
@@ -21,10 +21,10 @@
 
         <ImageView
             android:id="@+id/most_detail_back"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:paddingBottom="14dp"
-            android:paddingTop="14dp"
+            android:padding="8dp"
+            android:layout_marginLeft="10dp"
             android:src="@mipmap/icon_back"/>
 
         <TextView
