--- a/ZhangTu/src/main/res/layout/most_detail_biaoqian.xml
+++ b/ZhangTu/src/main/res/layout/most_detail_biaoqian.xml
@@ -34,7 +34,7 @@
         android:scrollbars="none">
             <com.example.mrwuchao.newone.views.MyLiuViewGroup
                 android:id="@+id/most_detail_myliu"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="140dp">
             </com.example.mrwuchao.newone.views.MyLiuViewGroup>
     </HorizontalScrollView>
