--- a/ZhangTu/src/main/res/values/colors.xml
+++ b/ZhangTu/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="mine_black">#000000</color>
     <color name="text_black">#575B5A</color>
     <color name="text_blue">#0000ff</color>
+    <color name="juhuang">#FCAC04</color>
 </resources>
